[gd_scene load_steps=2 format=2]

[ext_resource path="res://actors/player/managers/dash_manager.gd" type="Script" id=1]

[node name="DashManager" type="Node2D" groups=[
"save",
]]
script = ExtResource( 1 )

[node name="DashBufferRaycast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 8 )
collision_mask = 260

[node name="DashCooldown" type="Timer" parent="."]
